# reflow

./: LICENSE  README.md  circle.yml  hfold.cabal  reflow.cabal
.circleci/: config.yml
fixtures/: expected.txt  input.txt
man/: reflow.1
src/: Main.hs
src/Reflow/: CLI.hs  Parser.hs  Types.hs
src/hfold/: CLI.hs  Parser.hs  Types.hs
