name:                reflow
version:             1.0.0
synopsis:            This is a synopsis
license:             MIT
license-file:        LICENSE
author:              Gordon Fontenot
maintainer:          gordon@fonten.io
build-type:          Simple
cabal-version:       >=1.10

executable reflow
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base >=4.8 && <4.9
                   , optparse-applicative
                   , text
                   , parsec

  other-modules:     Reflow.CLI
                   , Reflow.Parser
                   , Reflow.Types

  default-language:  Haskell2010
